# ansi-strip

./: .gitignore  Cargo.toml  README.md  justfile
src/: lib.rs  main.rs  tests.rs
tests/: integration_test.rs
